--- a/trafolist.html
+++ b/trafolist.html
@@ -80,11 +80,20 @@ th, td {
   border: 1px solid #ccc;
   padding: 6px 8px;
 }
+/* Reduce first column width */
+#xfmrTable th:first-child,
+#xfmrTable td:first-child {
+  width: 50px;
+  max-width: 50px;
+  text-align: center;
+  white-space: nowrap;
+}
+
 
 /* STICKY HEADERS */
 thead tr:nth-child(1) th {
   position: sticky;
-  top: 56px; /* below blue header */
+  top: 56px;
   background: #003f88;
   color: white;
   z-index: 20;
@@ -107,7 +116,7 @@ tr:hover {
   font-size: 12px;
 }
 
-/* SECTION SEPARATOR (Column A blank) */
+/* SECTION SEPARATOR */
 .section-row {
   background: #dbe9ff !important;
   font-weight: 600;
@@ -148,19 +157,25 @@ tr:hover {
 </div>
 
 <script>
-const SHEET_URL =
-  "https://docs.google.com/spreadsheets/d/1bmSj5wXK2FfSLJh3aQl3cN57iXG8u-zVrxXr5ZOeRqE/gviz/tq" +
-  "?gid=1402868375&tqx=out:json";
-
-/* 👉 USE REQUIRED COLUMNS ONLY (adjust if needed) */
-const COLS = [0,1,2,3,4,5,6,7,8,9,10]; 
+// 🔥 FAST JSON SOURCE
+const JSON_URL =
+  "https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/master/transformers.json";
 
 async function loadTransformers() {
-  const res = await fetch(SHEET_URL);
-  const txt = await res.text();
-  const json = JSON.parse(txt.substring(47, txt.length - 2));
+  const cache = localStorage.getItem("xfmrJSON");
+  let data;
 
-  const rows = json.table.rows;
+  if (cache) {
+    data = JSON.parse(cache);
+  } else {
+    const res = await fetch(JSON_URL);
+    data = await res.json();
+    localStorage.setItem("xfmrJSON", JSON.stringify(data));
+  }
+
+  const headers = data.headers;
+  const rows = data.rows;
+
   const headerRow = document.getElementById("headerRow");
   const filterRow = document.getElementById("filterRow");
   const tbody = document.querySelector("#xfmrTable tbody");
@@ -169,40 +184,37 @@ async function loadTransformers() {
   filterRow.innerHTML = "";
   tbody.innerHTML = "";
 
-  /* ===== HEADERS FROM ROW 3 (DIRECT) ===== */
-  const headerCells = rows[0].c;
+/* ===== HEADERS FROM FIRST DATA ROW ===== */
+const headingRow = rows[1];
 
-  COLS.forEach(i => {
-    const th = document.createElement("th");
-    th.textContent = headerCells[i]?.v || "";
-    headerRow.appendChild(th);
+headingRow.forEach(h => {
+  const th = document.createElement("th");
+  th.textContent = h || "";
+  headerRow.appendChild(th);
 
-    const fh = document.createElement("th");
-    fh.innerHTML = "<input placeholder='🔍'>";
-    filterRow.appendChild(fh);
-  });
+  const fh = document.createElement("th");
+  fh.innerHTML = "<input placeholder='🔍'>";
+  filterRow.appendChild(fh);
+});
 
-  /* ===== DATA ROWS (FROM ROW 4 ONWARDS) ===== */
-  rows.slice(1).forEach(r => {
-    const c = r.c || [];
 
-    /* Validation: Column B must not be blank */
-    if (!c[1]?.v) return;
+
+  /* ===== DATA ROWS (SKIP FIRST ROW) ===== */
+  rows.slice(1).forEach(r => {   // ✅ skip duplicate header row
+    if (!r[1]) return;           // Column B validation
 
     const tr = document.createElement("tr");
 
-    /* Section separator if Column A blank */
-    if (!c[0]?.v) tr.classList.add("section-row");
+    if (!r[0]) tr.classList.add("section-row");
 
-    COLS.forEach(i => {
+    r.forEach(v => {
       const td = document.createElement("td");
-      td.textContent = c[i]?.v ?? "";
+      td.textContent = v ?? "";
       tr.appendChild(td);
     });
 
-    /* 👉 CLICK → DRIVE INFO */
     tr.onclick = () => {
-      const transformerNo = c[2]?.v;
+      const transformerNo = r[2];
       if (!transformerNo) return;
 
       window.location.href =
@@ -257,5 +269,6 @@ function goBack() {
 loadTransformers();
 </script>
 
+  
 </body>
 </html>
