--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@ body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
 
 .header-title small {
   display: block;
-  font-size: 15px;      /* ⬅ increased size */
-  font-weight: 600;    /* ⬅ added slight bold */
-  color: #333;         /* ⬅ darker for clarity */
-  margin-top: 4px;     /* ⬅ little more spacing */
+  font-size: 15px;
+  font-weight: 600;
+  color: #333;
+  margin-top: 4px;
 }
-
 
 /* ===== ICON BUTTONS ===== */
 .icon-group {
@@ -60,7 +59,7 @@ body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
   cursor: pointer;
 }
 
-/* Tooltip text */
+/* Tooltip */
 .icon-wrap span {
   position: absolute;
   bottom: -22px;
@@ -77,7 +76,6 @@ body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
   transition: opacity 0.2s;
 }
 
-/* Show on hover or focus (mobile tap) */
 .icon-wrap:hover span,
 .icon-btn:focus + span {
   opacity: 1;
@@ -118,9 +116,8 @@ body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
 /* ===== MOBILE ===== */
 @media(max-width:768px){
   .grid { grid-template-columns: 1fr; }
-  .header-title small { font-size: 14px; }  /* ⬅ mobile-friendly */
+  .header-title small { font-size: 14px; }
 }
-
 </style>
 </head>
 
@@ -129,11 +126,11 @@ body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
 <div class="header-bar">
   <div class="icon-group">
     <div class="icon-wrap">
-      <button class="icon-btn" onclick="goHome()" title="Home">🏠</button>
+      <button class="icon-btn" onclick="goHome()">🏠</button>
       <span>Home</span>
     </div>
     <div class="icon-wrap">
-      <button class="icon-btn" onclick="goBack()" title="Back">🔁</button>
+      <button class="icon-btn" onclick="goBack()">🔁</button>
       <span>Back</span>
     </div>
   </div>
@@ -149,23 +146,23 @@ body { font-family: Arial, sans-serif; margin: 0; background: #f2f6ff; }
 </div>
 
 <script>
-const SHEET_URL =
-"https://docs.google.com/spreadsheets/d/1a9CRieF-ii4WJNSUODIwlYWKdTIT63u2mlu9Rtj4ltg/gviz/tq?gid=0&tqx=out:json";
+// 🔥 JSON DATA SOURCE
+const JSON_URL =
+  "https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/drive.json";
 
 async function loadData() {
   const id = new URLSearchParams(location.search).get("id");
   if (!id) return;
 
-  const res = await fetch(SHEET_URL);
-  const txt = await res.text();
-  const json = JSON.parse(txt.substring(47, txt.length - 2));
-  const rows = json.table.rows;
+  const res = await fetch(JSON_URL);
+  const json = await res.json();
+  const rows = json.rows;
 
   let c = null;
+
   rows.forEach(r => {
-    const col = r.c || [];
-    const uid = `${col[1]?.v}-${col[2]?.v}`.toUpperCase();
-    if (uid === id.toUpperCase()) c = col;
+    const uid = `${r[1]}-${r[2]}`.toUpperCase();
+    if (uid === id.toUpperCase()) c = r;
   });
 
   if (!c) {
@@ -174,7 +171,8 @@ async function loadData() {
     return;
   }
 
-  const BAT = (c[1]?.v || "").toUpperCase();
+  const BAT = (c[1] || "").toUpperCase();
+
   if (BAT === "TRANSFORMER") showTransformer(c);
   else if (BAT === "BREAKER") showBreaker(c);
   else showMotor(c);
@@ -184,21 +182,21 @@ async function loadData() {
 function showTransformer(c) {
   document.getElementById("content").innerHTML = `
   <div class="card">
-    <h3>Transformer No: ${c[2]?.v}</h3>
+    <h3>Transformer No: ${c[2]}</h3>
     <div class="grid">
-      <p><span class="label">TR Sl No:</span> ${c[3]?.v}</p>
-      <p><span class="label">Make:</span> ${c[4]?.v}</p>
-      <p><span class="label">Rating:</span> ${c[5]?.v} KVA</p>
-      <p><span class="label">From S/S:</span> ${c[6]?.v}</p>
-      <p><span class="label">Unit S/S:</span> ${c[7]?.v}</p>
-      <p><span class="label">% Impedance:</span> ${c[8]?.v}</p>
-      <p><span class="label">LT SWBD:</span> ${c[9]?.v}</p>
-      <p><span class="label">Rating:</span> ${c[10]?.v}</p>
+      <p><span class="label">TR Sl No:</span> ${c[3]}</p>
+      <p><span class="label">Make:</span> ${c[4]}</p>
+      <p><span class="label">Rating:</span> ${c[5]} KVA</p>
+      <p><span class="label">From S/S:</span> ${c[6]}</p>
+      <p><span class="label">Unit S/S:</span> ${c[7]}</p>
+      <p><span class="label">% Impedance:</span> ${c[8]}</p>
+      <p><span class="label">LT SWBD:</span> ${c[9]}</p>
+      <p><span class="label">Rating:</span> ${c[10]}</p>
     </div>
 
     <div class="button-wrap">
       <div class="icon-wrap">
-        <button class="action-btn" onclick="openHistory()" title="History">📜 History</button>
+        <button class="action-btn" onclick="openHistory()">📜 History</button>
         <span>History</span>
       </div>
     </div>
@@ -209,20 +207,20 @@ function showTransformer(c) {
 function showBreaker(c) {
   document.getElementById("content").innerHTML = `
   <div class="card">
-    <h3>Breaker – ${c[2]?.v}</h3>
+    <h3>Breaker – ${c[2]}</h3>
     <div class="grid">
-      <p><span class="label">Compartment No:</span> ${c[3]?.v}</p>
-      <p><span class="label">Breaker Desc:</span> ${c[4]?.v}</p>
-      <p><span class="label">Make:</span> ${c[5]?.v}</p>
-      <p><span class="label">Rating:</span> ${c[6]?.v} A</p>
-      <p><span class="label">Type:</span> ${c[7]?.v}</p>
-      <p><span class="label">LT SWBD:</span> ${c[9]?.v}</p>
-      <p><span class="label">Panel Rating:</span> ${c[10]?.v}</p>
+      <p><span class="label">Compartment No:</span> ${c[3]}</p>
+      <p><span class="label">Breaker Desc:</span> ${c[4]}</p>
+      <p><span class="label">Make:</span> ${c[5]}</p>
+      <p><span class="label">Rating:</span> ${c[6]} A</p>
+      <p><span class="label">Type:</span> ${c[7]}</p>
+      <p><span class="label">LT SWBD:</span> ${c[9]}</p>
+      <p><span class="label">Panel Rating:</span> ${c[10]}</p>
     </div>
 
     <div class="button-wrap">
       <div class="icon-wrap">
-        <button class="action-btn" onclick="openHistory()" title="History">📜 History</button>
+        <button class="action-btn" onclick="openHistory()">📜 History</button>
         <span>History</span>
       </div>
     </div>
@@ -233,27 +231,27 @@ function showBreaker(c) {
 function showMotor(c) {
   document.getElementById("content").innerHTML = `
   <div class="card">
-    <h3>${c[1]?.v} – ${c[2]?.v}</h3>
-    <p><span class="label">Pump Type:</span> ${c[4]?.v}</p>
+    <h3>${c[1]} – ${c[2]}</h3>
+    <p><span class="label">Pump Type:</span> ${c[4]}</p>
 
     <div class="grid">
-      <p><span class="label">Rating:</span> ${c[5]?.v} KW</p>
-      <p><span class="label">FLC:</span> ${c[10]?.v} A</p>
-      <p><span class="label">SFU:</span> ${c[14]?.v}</p>
-      <p><span class="label">Fuse:</span> ${c[15]?.v}</p>
-      <p><span class="label">Contactor:</span> ${c[16]?.v}</p>
-      <p><span class="label">BMR / Relay / VFD:</span> ${c[17]?.v}</p>
-      <p><span class="label">CT (M):</span> ${c[18]?.v}</p>
-      <p><span class="label">CT (P):</span> ${c[19]?.v}</p>
-      <p><span class="label">Aux Contactor:</span> ${c[20]?.v}</p>
-      <p><span class="label">Ammeter:</span> ${c[21]?.v}</p>
-      <p><span class="label">Ind Lamp:</span> ${c[22]?.v}</p>
-      <p><span class="label">No of Spare Motors:</span> ${c[23]?.v}</p>
+      <p><span class="label">Rating:</span> ${c[5]} KW</p>
+      <p><span class="label">FLC:</span> ${c[10]} A</p>
+      <p><span class="label">SFU:</span> ${c[14]}</p>
+      <p><span class="label">Fuse:</span> ${c[15]}</p>
+      <p><span class="label">Contactor:</span> ${c[16]}</p>
+      <p><span class="label">BMR / Relay / VFD:</span> ${c[17]}</p>
+      <p><span class="label">CT (M):</span> ${c[18]}</p>
+      <p><span class="label">CT (P):</span> ${c[19]}</p>
+      <p><span class="label">Aux Contactor:</span> ${c[20]}</p>
+      <p><span class="label">Ammeter:</span> ${c[21]}</p>
+      <p><span class="label">Ind Lamp:</span> ${c[22]}</p>
+      <p><span class="label">No of Spare Motors:</span> ${c[23]}</p>
     </div>
 
     <div class="button-wrap">
       <div class="icon-wrap">
-        <button class="action-btn" onclick="openHistory()" title="History">📜 History</button>
+        <button class="action-btn" onclick="openHistory()">📜 History</button>
         <span>History</span>
       </div>
     </div>
@@ -266,6 +264,7 @@ function openHistory() {
     "https://08electricaldata.github.io/drive-viewer/history.html?id=" +
     encodeURIComponent(id);
 }
+
 function goHome(){ location.href="https://08electricaldata.github.io/"; }
 function goBack(){ history.back(); }
 
