--- a/history.html
+++ b/history.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -199,122 +200,154 @@ function goDriveInfo(){
   location.href="https://08electricaldata.github.io/drive-viewer/index.html?id="+encodeURIComponent(id);
 }
 
-/* ===== DRIVE INFO (NEW SHEET) ===== */
+/* ===== DRIVE INFO (UNCHANGED) ===== */
 async function loadDriveInfo(){
   if(!id) return;
 
-  const url="https://docs.google.com/spreadsheets/d/1a9CRieF-ii4WJNSUODIwlYWKdTIT63u2mlu9Rtj4ltg/gviz/tq?gid=0&tqx=out:json";
+  const url="https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/drive.json";
   const r=await fetch(url);
-  const t=await r.text();
-  const j=JSON.parse(t.substring(47,t.length-2));
+  const j=await r.json();
 
   let c=null;
-  j.table.rows.forEach(r=>{
-    const col=r.c||[];
-    if((`${col[1]?.v}-${col[2]?.v}`).toUpperCase()===id.toUpperCase()) c=col;
+  j.rows.forEach(r=>{
+    if((`${r[1]}-${r[2]}`).toUpperCase()===id.toUpperCase()) c=r;
   });
 
-  if(!c){ document.getElementById("driveInfo").innerHTML="Drive not found."; return; }
+  if(!c){
+    document.getElementById("driveInfo").innerHTML="Drive not found.";
+    return;
+  }
 
-  const type=(c[1]?.v||"").toUpperCase();
+  const type=(c[1]||"").toUpperCase();
 
   if(type==="TRANSFORMER"){
     document.getElementById("driveInfo").innerHTML=`
-      <h3>Transformer No: ${c[2]?.v}</h3>
+      <h3>Transformer No: ${c[2]}</h3>
       <div class="grid">
-        <p><span class="label">TR Sl No:</span> ${c[3]?.v}</p>
-        <p><span class="label">Make:</span> ${c[4]?.v}</p>
-        <p><span class="label">Rating:</span> ${c[5]?.v} KVA</p>
-        <p><span class="label">From S/S:</span> ${c[6]?.v}</p>
-        <p><span class="label">Unit S/S:</span> ${c[7]?.v}</p>
-        <p><span class="label">% Impedance:</span> ${c[8]?.v}</p>
-        <p><span class="label">LT SWBD:</span> ${c[9]?.v}</p>
-        <p><span class="label">Panel Rating:</span> ${c[10]?.v}</p>
+        <p><span class="label">TR Sl No:</span> ${c[3]}</p>
+        <p><span class="label">Make:</span> ${c[4]}</p>
+        <p><span class="label">Rating:</span> ${c[5]} KVA</p>
+        <p><span class="label">From S/S:</span> ${c[6]}</p>
+        <p><span class="label">Unit S/S:</span> ${c[7]}</p>
+        <p><span class="label">% Impedance:</span> ${c[8]}</p>
+        <p><span class="label">LT SWBD:</span> ${c[9]}</p>
+        <p><span class="label">Panel Rating:</span> ${c[10]}</p>
       </div>`;
     return;
   }
 
   if(type==="BREAKER"){
     document.getElementById("driveInfo").innerHTML=`
-      <h3>Breaker – ${c[2]?.v}</h3>
+      <h3>Breaker – ${c[2]}</h3>
       <div class="grid">
-        <p><span class="label">Compartment No:</span> ${c[3]?.v}</p>
-        <p><span class="label">Breaker Desc:</span> ${c[4]?.v}</p>
-        <p><span class="label">Make:</span> ${c[5]?.v}</p>
-        <p><span class="label">Rating:</span> ${c[6]?.v} A</p>
-        <p><span class="label">Type:</span> ${c[7]?.v}</p>
-        <p><span class="label">LT SWBD:</span> ${c[9]?.v}</p>
-        <p><span class="label">Panel Rating:</span> ${c[10]?.v}</p>
+        <p><span class="label">Compartment No:</span> ${c[3]}</p>
+        <p><span class="label">Breaker Desc:</span> ${c[4]}</p>
+        <p><span class="label">Make:</span> ${c[5]}</p>
+        <p><span class="label">Rating:</span> ${c[6]} A</p>
+        <p><span class="label">Type:</span> ${c[7]}</p>
+        <p><span class="label">LT SWBD:</span> ${c[9]}</p>
+        <p><span class="label">Panel Rating:</span> ${c[10]}</p>
       </div>`;
     return;
   }
 
   document.getElementById("driveInfo").innerHTML=`
-    <h3>${c[1]?.v} – ${c[2]?.v}</h3>
-    <p><span class="label">Pump Type:</span> ${c[4]?.v}</p>
+    <h3>${c[1]} – ${c[2]}</h3>
+    <p><span class="label">Pump Type:</span> ${c[4]}</p>
     <div class="grid">
       <div>
-        <p><span class="label">Rating:</span> ${c[5]?.v} KW</p>
-        <p><span class="label">FLC:</span> ${c[10]?.v} A</p>
+        <p><span class="label">Rating:</span> ${c[5]} KW</p>
+        <p><span class="label">FLC:</span> ${c[10]} A</p>
       </div>
       <div>
-        <p><span class="label">SFU:</span> ${c[14]?.v}</p>
-        <p><span class="label">Fuse:</span> ${c[15]?.v}</p>
-        <p><span class="label">Contactor:</span> ${c[16]?.v}</p>
-        <p><span class="label">Relay:</span> ${c[17]?.v}</p>
+        <p><span class="label">SFU:</span> ${c[14]}</p>
+        <p><span class="label">Fuse:</span> ${c[15]}</p>
+        <p><span class="label">Contactor:</span> ${c[16]}</p>
+        <p><span class="label">Relay:</span> ${c[17]}</p>
       </div>
       <div>
-        <p><span class="label">CT (M):</span> ${c[18]?.v}</p>
-        <p><span class="label">CT (P):</span> ${c[19]?.v}</p>
-        <p><span class="label">Aux Contactor:</span> ${c[20]?.v}</p>
+        <p><span class="label">CT (M):</span> ${c[18]}</p>
+        <p><span class="label">CT (P):</span> ${c[19]}</p>
+        <p><span class="label">Aux Contactor:</span> ${c[20]}</p>
       </div>
     </div>`;
 }
 
-/* ===== HISTORY (EXACT ORIGINAL WORKING CODE) ===== */
-function parseDate(v){ if(!v) return new Date(0);
-  if(typeof v==="string"&&v.startsWith("Date(")){const p=v.match(/\d+/g);return new Date(p[0],p[1],p[2]);}
-  if(/^\d{2}\/\d{2}\/\d{4}$/.test(v)){const[d,m,y]=v.split("/");return new Date(y,m-1,d);}
-  if(/^\d{2}-\d{2}-\d{4}$/.test(v)){const[d,m,y]=v.split("-");return new Date(y,m-1,d);}
-  return new Date(0);
+/* ===== DATE HELPERS ===== */
+function parseDate(v){
+  if(!v) return new Date(0);
+  if(typeof v==="string" && /^\d{2}\/\d{2}\/\d{4}$/.test(v)){
+    const[d,m,y]=v.split("/");
+    return new Date(y,m-1,d);
+  }
+  return new Date(v);
 }
-function formatDate(v){const d=parseDate(v);return `${String(d.getDate()).padStart(2,"0")}-${String(d.getMonth()+1).padStart(2,"0")}-${d.getFullYear()}`;}
+function formatDate(v){
+  const d=parseDate(v);
+  return `${String(d.getDate()).padStart(2,"0")}-${String(d.getMonth()+1).padStart(2,"0")}-${d.getFullYear()}`;
+}
+
+/* ===== HISTORY (YEAR-WISE JSON COMBINE) ===== */
+const HISTORY_YEARS=[2026,2025,2024,2023,2022,2021,2020,2019];
+const HISTORY_BASE="https://raw.githubusercontent.com/08electricaldata/08electricaldata-json/main/history/";
 
 async function loadHistory(){
-  const url="https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq?gid=751880096&tqx=out:json";
-  const r=await fetch(url);const t=await r.text();
-  const j=JSON.parse(t.substring(47,t.length-2));
-  let rows=[];
-  j.table.rows.forEach(r=>{
-    const c=r.c||[];
-    if((`${c[2]?.v}-${c[3]?.v}`).toUpperCase()!==id?.toUpperCase()) return;
-    rows.push(c);
-  });
-  rows.sort((a,b)=>parseDate(b[4]?.v)-parseDate(a[4]?.v));
+  if(!id) return;
+  let all=[];
+
+  for(const y of HISTORY_YEARS){
+    try{
+      const r=await fetch(HISTORY_BASE+y+".json");
+      if(!r.ok) continue;
+      const j=await r.json();
+      j.rows.forEach(row=>{
+        if((`${row[2]}-${row[3]}`).toUpperCase()===id.toUpperCase()){
+          all.push(row);
+        }
+      });
+    }catch(e){}
+  }
+
+  all.sort((a,b)=>parseDate(b[4])-parseDate(a[4]));
+  renderHistory(all);
+}
+
+function renderHistory(rows){
   const tbody=document.querySelector("#historyTable tbody");
   tbody.innerHTML="";
   let currentYear="";
-  rows.forEach(c=>{
-    const d=parseDate(c[4]?.v);const year=d.getFullYear();
-    if(year!==currentYear){currentYear=year;
+
+  rows.forEach(r=>{
+    const d=parseDate(r[4]);
+    const y=d.getFullYear();
+
+    if(y!==currentYear){
+      currentYear=y;
       const yr=document.createElement("tr");
       yr.className="year-row";
-      yr.innerHTML=`<td colspan="8">YEAR ${year}</td>`;
-      tbody.appendChild(yr);}
+      yr.innerHTML=`<td colspan="8">YEAR ${y}</td>`;
+      tbody.appendChild(yr);
+    }
+
     const tr=document.createElement("tr");
     tr.innerHTML=`
-      <td>${c[0]?.v||""}</td>
-      <td>${c[1]?.v||""}</td>
-      <td>${formatDate(c[4]?.v)}</td>
-      <td>${c[5]?.v||""}</td>
-      <td>${c[6]?.v||""}</td>
-      <td>${c[7]?.v||""}</td>
-      <td>${c[9]?.v||""}</td>
-      <td>${c[10]?.v?`<a href="${c[10].v}" target="_blank">Open</a>`:""}</td>`;
+      <td>${r[0]||""}</td>
+      <td>${r[1]||""}</td>
+      <td>${formatDate(r[4])}</td>
+      <td>${r[5]||""}</td>
+      <td>${r[6]||""}</td>
+      <td>${r[7]||""}</td>
+      <td>${r[9]||""}</td>
+      <td>${r[10]?`<a href="${r[10]}" target="_blank">Open</a>`:""}</td>`;
     tbody.appendChild(tr);
   });
+
+  if(!rows.length){
+    tbody.innerHTML=`<tr><td colspan="8" style="text-align:center;">No history found</td></tr>`;
+  }
 }
 
+/* ===== INIT ===== */
 loadDriveInfo();
 loadHistory();
 </script>
